Added a new div tag

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <h2>The New Day Has Dawn</h2>
       <p>The Work is Good in The End</p>
     </div>
+    <div>
+      <p>The reviewed code is with us...</p>
+    </div>
 	<script>
 		var x = 6;
 
